--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
+    "@next-auth/mongodb-adapter": "^1.0.3",
+    "mongodb": "^4.7.0",
     "next": "12.2.0",
+    "next-auth": "^4.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
