--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
     "@next-auth/mongodb-adapter": "^1.0.3",
+    "framer-motion": "^6.3.16",
     "mongodb": "^4.7.0",
     "next": "12.2.0",
     "next-auth": "^4.7.0",
+    "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
