--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next-auth/mongodb-adapter": "^1.0.3",
     "framer-motion": "^6.3.16",
     "mongodb": "^4.7.0",
+    "mongoose": "^6.4.7",
     "next": "12.2.0",
     "next-auth": "^4.7.0",
     "next-themes": "^0.2.0",
